# Allurite

./: .env.example  .gitignore  BUG_AUDIT_REPORT.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  INSTALLATION.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_READINESS_REPORT.md  README.md  SYSTEM_MAP.md  UI_UX_AUDIT_REPORT.md  UI_UX_SYSTEM_MAP.md  eslint.config.mjs  full_crm_test.py  package-lock.json  package.json  scratch_check_db.js  seed-admin.js  seed-sample-data.js
project-docs/: ACCESSIBILITY_RULES.md  AI_DEVELOPMENT_RULES.md  API_RULES.md  CRM_MODULE_BLUEPRINT.md  DATABASE_BLUEPRINT.md  DATABASE_RULES.md  DEPLOYMENT_RULES.md  DESIGN_IMPLEMENTATION_BLUEPRINT.md  DESIGN_SYSTEM_RULES.md  DESKTOP_APP_RULES.md  FILE_STORAGE_RULES.md  PRODUCT_VISION.md  PROJECT_RULES.md  RESPONSIVE_RULES.md  SECURITY_RULES.md  SYSTEM_GOALS.md  TASK_EXECUTION_RULES.md  TECH_ARCHITECTURE.md  UI_UX_BLUEPRINT.md  UI_UX_RULES.md
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx
src/context/: LanguageContext.tsx  ThemeContext.tsx  ToastContext.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: analytics-engine.ts  audit-logger.ts  auth-check.ts  auth.ts  client-auth.ts  db.ts  egypt-helper.ts  encryption.ts  followup-check.ts  jwt.ts  notification-service.ts  task-check.ts
src/models/: AuditLog.ts  Backup.ts  Client.ts  CompanySettings.ts  Department.ts  Employee.ts  File.ts  FollowUp.ts  Notification.ts  Report.ts  Role.ts  Task.ts  User.ts
(+59 files in other folders)
