[package]
name = "allurite"
version = "1.0.0"
description = "Allurite CRM Desktop Application"
authors = ["Allurite Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "allurite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
